2004-04-11  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:

	Fixed a bug introduced in the latest commit entry. 

2004-04-08  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:

	Rescues the TimerError exception raised by Ruby/Amazon (when
	it could not reach amazon.com), and displays a meaningful
	error dialog box.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Auto-sensitize File/Properties and Edit/Delete according to
	the current focus.

2004-04-07  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb:

	Implemented the possibility to delete a library.

2004-04-06  Laurent Sansonetti  <lrz@gnome.org>
	
	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Displays an error dialog when the user picks a new name for a 
	  library which contains at least one illegal character ;

	- Automatically show the sidepane upon "New Library", because it
	  may be hidden ;

	- Fixed a bug in the random name chooser (for "New Library") ; 

	- Displays an error dialog when the user tries to add a book
	  which already exists in the selected library ;

	- Displays smaller names on the icon view (max 15 characters).

2004-04-05  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb:

	Fixed a bug when loading books (the reference to the Library obj
	is not saved in the YAML description).

	* lib/alexandria/ui/main_app.rb:

	Implemented the "New Library" feature.

2004-04-04  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:

	Libraries (in the side pane) are now 'editable' (means that it's
	possible to rename them).

2004-04-03  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:

	Properties [menu|popup] items are now disabled unless a single book